--- a/src/App.css
+++ b/src/App.css
@@ -631,7 +631,8 @@ body.case-study-active {
 
   .case-study-text p {
     font-size: 2.5vw;
-    padding-bottom: 0px;
+    padding-bottom: 0vw;
+    margin-bottom: 0vw;
   }
 
   .case-study-image img {
